# Picasso-The-Editing-Software-

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ENGINEERING_BLUEPRINT.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  build_release.ps1  pubspec.yaml  run.ps1  vcpkg.json
.github/workflows/: release.yml  windows_build.yml
android/app/: build.gradle.kts
app_flutter/: analysis.txt  analysis_log.txt  pubspec.yaml
app_flutter/lib/: main.dart
app_flutter/lib/bridge/: ipc_client.dart
app_flutter/lib/core/: app_state.dart  project_state.dart
app_flutter/lib/input/: default_keymap.json  shortcut_manager.dart
app_flutter/lib/timeline/: timeline_model.dart
app_flutter/lib/video/: dart_video_player.dart  native_video_player.dart  video_engine_bindings.dart  video_player_widget.dart
app_flutter/test/: timeline_widget_test.dart
fullstack-app/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json
fullstack-app/backend/: .env.example  jest.config.cjs  package.json  tsconfig.json
fullstack-app/backend/src/: app.ts  server.ts
fullstack-app/backend/tests/: jwt.test.ts  password.test.ts  setupEnv.ts  validation.test.ts
fullstack-app/database/: schema.sql
fullstack-app/docker/: backend.Dockerfile  frontend.Dockerfile
fullstack-app/frontend/: package.json  tailwind.config.ts  tsconfig.json
installer/: Package.appxmanifest
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native/ai_engine/: CMakeLists.txt
native/animation/: CMakeLists.txt
native/audio_engine/: CMakeLists.txt
native/cloud_client/: CMakeLists.txt
native/color_engine/: CMakeLists.txt
native/common/: CMakeLists.txt
native/database/: CMakeLists.txt
native/ipc/: CMakeLists.txt
native/node_runtime/: CMakeLists.txt
native/render_worker/: CMakeLists.txt
native/scripting/: CMakeLists.txt
native/tests/: CMakeLists.txt
native/timeline/: CMakeLists.txt
native/titling_engine/: CMakeLists.txt
native/vfx_host/: CMakeLists.txt
native/video_engine/: CMakeLists.txt
native/video_engine/include/: VideoEngine.h
native/video_engine/src/: VideoEngine.cpp
scripts/: fix_media_kit_cmake.ps1
test/: widget_test.dart
tools/: build.ps1
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+105 files in other folders)
